[tool.poetry]
name = "course-2-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
ipython = "^8.28.0"
jupyter = "^1.1.1"
holidays = "^0.59"
seaborn = "^0.13.2"
ipympl = "^0.9.4"
scikit-learn = "^1.5.2"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
